[gd_scene load_steps=3 format=3 uid="uid://ch30wo5lb22uk"]

[ext_resource type="Script" uid="uid://dgsjk208a8tiw" path="res://UI/Script/in_game_ui.gd" id="1_v4w3m"]
[ext_resource type="PackedScene" uid="uid://bhmxe7eqqmqje" path="res://UI/InGameMenu.tscn" id="3_2bndh"]

[node name="InGameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4w3m")

[node name="MainUIElements" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pause" type="Button" parent="MainUIElements"]
layout_mode = 0
offset_right = 93.0
offset_bottom = 65.0
text = "||"

[node name="InGameMenu" parent="." instance=ExtResource("3_2bndh")]
visible = false
layout_mode = 1

[connection signal="button_up" from="MainUIElements/Pause" to="." method="_on_option_button_pressed"]
